--- a/css/style.css
+++ b/css/style.css
@@ -161,6 +161,7 @@ body {
   height: 100%;
   border-radius: 13px;
   opacity: 1;
+object-fit: cover;
 
 }
 
@@ -169,6 +170,7 @@ body {
   height: 100%;
   border-radius: 13px;
   opacity: 1;
+object-fit: cover;
 }
 
 /*image slider end*/
